矢印できたけど改良する

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="info">
               <canvas id="info-canvas" width="260" height="204"></canvas>
               <p class="info-introduction">入力するパーツの説明が表示されます</p>
-              <div id="case-comment" class="comment">ケースの直径をmm単位で入力</div>
+              <!-- <div id="case-comment" class="comment">ケースの直径をmm単位で入力</div>
               <div id="opening-comment" class="comment">ケースの見切直径をmm単位で入力</div>
-              <div id="dial-comment" class="comment">ダイヤルの見える部分の直径をmmで入力</div>
+              <div id="dial-comment" class="comment">ダイヤルの見える部分の直径をmmで入力</div> -->
             </div>
           </div>
           <!---------- case shapes ---------->
