いったんできました。一部不具合を直していきます

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Watch Design Maker</h1>
   </header>
   <main>
-    <button id="dl-btn">ダウンロード(SVG)</button>
+    <div id="dl-btn">SVG</div>
     <!---------- main canvas ---------->
     <canvas id="main-canvas" width="384" height="800">
     </canvas>
