--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <h1>Watch Design Maker</h1>
   </header>
   <main>
-    <div id="dl-btn">SVG</div>
+    <div id="dl-btn">
+      <p>SVG</p>
+    </div>
     <!---------- main canvas ---------->
     <canvas id="main-canvas" width="384" height="800">
     </canvas>
