--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </header>
   <main>
     <div id="dl-btn">
-      <p>SVG</p>
+      <p class="svg">SVG</p>
+      <p class="svg-comment">SVG形式でダウンロード</p>
     </div>
     <!---------- main canvas ---------->
     <canvas id="main-canvas" width="384" height="800">
