コメント表示部分いったんOK。改良したい箇所はまだある

--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
           </div>
           <!---------- case shapes ---------->
           <div>
-            <div class="shape-list">
+            <div class="shape-list shape-list-lug">
               <h3>ラグ形状:</h3>
               <ul>
                 <li>
                   <label class="radio-label">
                     <input type="radio" name="lug-shape" value="round">
                   </label>
-                  <img src="./images/lug-round-w.svg" alt="丸い形状のラグ" width="80" height="32">
+                  <img src="./images/lug-round.svg" alt="丸い形状のラグ" width="8" height="32">
                   <p>丸型</p>
                 </li>
                 <li>
                   <label class="radio-label">
                     <input type="radio" name="lug-shape" value="square">
                   </label>
-                  <img src="./images/lug-square-w.svg" alt="四角い形状のラグ" width="80" height="32">
-                  <p>丸型</p>
+                  <img src="./images/lug-square.svg" alt="四角い形状のラグ" width="8" height="32">
+                  <p>角型</p>
                 </li>
               </ul>
             </div>
-            <div class="shape-list">
+            <div class="shape-list shape-list-crown">
               <h3>リュウズ形状:</h3>
               <ul>
                 <li>
@@ -95,11 +95,11 @@
                     <input type="radio" name="crown-shape" value="square">
                   </label>
                   <img src="./images/crown-square.svg" alt="四角い形状のリュウズ" width="12" height="18">
-                  <p>丸型</p>
+                  <p>角型</p>
                 </li>
               </ul>
             </div>
-            <div class="shape-list">
+            <div class="shape-list shape-list-color">
             <h3>金属色:</h3>
             <ul>
               <li>
@@ -129,7 +129,7 @@
                 </label>
                 <div class="custom-color"></div>
                 <input type="color" id="color-picker">
-                <p>その他の色を選ぶ</p>
+                <p>その他の色</p>
               </li>
             </ul>
           </div>
