ブランチ分けます

--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
               <ul>
                 <li>
                   <label class="radio-label">
-                    <input type="radio" name="metal-color" value="gold">
+                    <input type="radio" name="case-color" value="gold">
                   </label>
                   <div class="gold-color"></div>
                   <p>ゴールド</p>
                 </li>
                 <li>
                   <label class="radio-label">
-                    <input type="radio" name="metal-color" value="silver">
+                    <input type="radio" name="case-color" value="silver">
                   </label>
                   <div class="silver-color"></div>
                   <p>シルバー</p>
                 </li>
                 <li>
                   <label class="radio-label">
-                    <input type="radio" name="metal-color" value="pink-gold">
+                    <input type="radio" name="case-color" value="pink-gold">
                   </label>
                   <div class="pink-gold-color"></div>
                   <p>ピンクゴールド</p>
                 </li>
                 <li>
                   <label class="radio-label">
-                    <input type="radio" name="metal-color" value="custom-color">
+                    <input type="radio" name="case-color" value="custom-color">
                   </label>
                   <div class="custom-color"></div>
                   <input type="color" id="case-color-picker" class="color-picker">
@@ -144,13 +144,13 @@
             <!---------- strap sizes ---------->
             <div class="text-labels-container">
               <div class="text-label-container">
-                <label for="strap-top-length">ベルト長さ(上側):</label>
-                <input type="text" id="strap-top-length" size="4">
+                <label for="upper-strap-length">ベルト長さ(上側):</label>
+                <input type="text" id="upper-strap-length" size="4">
                 <span>mm</span>
               </div>
               <div class="text-label-container">
-                <label for="strap-bottom-length">ベルト長さ(下側):</label>
-                <input type="text" id="strap-bottom-length" size="4">
+                <label for="lower-strap-length">ベルト長さ(下側):</label>
+                <input type="text" id="lower-strap-length" size="4">
                 <span>mm</span>
               </div>
               <div class="option-container">
@@ -282,7 +282,7 @@
     </ul>
   </main>
     <!-- test ----------------------------------------->
-    
+    <button id="button-for-test">test</button>
     <input type="range" name="crown-size" id="test-range" min="1" max="50" step="1">
     <input type="range" name="canvas-size" id="canvas-range" min="1" max="5" step=".1">
     <ul class="gnavi">
