[add]ベルト穴を描画する機能を追加
ベルト穴を描画する機能を追加しました。

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
   </main>
     <!-- test ----------------------------------------->
     <button id="button-for-test">test</button>
+    <button id="button-for-test2">test2</button>
     <input type="range" name="crown-size" id="test-range" min="1" max="50" step="1">
     <input type="range" name="canvas-size" id="canvas-range" min="1" max="5" step=".1">
     <ul class="gnavi">
